Fix filter dropdown overlapping, up limit of shows from 25 to 150.

--- a/app/_css/index.scss
+++ b/app/_css/index.scss
@@ -111,7 +111,8 @@
     }
 
     .filter-drop {
-        margin-top: 8px;
+        margin-top: 4px;
+        width: 100%;
     }
 
     /* filter styles */
